syntax = "proto3";

                 package userRating;
service UserRatingService {
 rpc createUserRating (UserRatingCreateInput) returns (UserRating) {}
rpc userRatings (findManyParams) returns (stream UserRating) {}
rpc userRating (UserRatingWhereUniqueInput) returns (UserRating) {}
rpc updateUserRating (UserRatingUpdateInput) returns (UserRating) {}
rpc deleteUserRating (UserRatingWhereUniqueInput) returns (UserRating) {} 
 }
message UserRatingCreateInput {
string createdAt = 1;
string id = 2;
int32 rating = 3;
string review = 4;
};
message UserRating {
string createdAt = 1;
string id = 2;
int32 rating = 3;
string review = 4;
};
message UserRatingWhereUniqueInput {
string createdAt = 1;
string id = 2;
int32 rating = 3;
string review = 4;
};
message UserRatingUpdateInput {
string createdAt = 1;
string id = 2;
int32 rating = 3;
string review = 4;
};
message findManyParams {

};